--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
   },
   "homepage": "https://github.com/jrong1271/leetcodeBeginner#readme",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "@vitest/coverage-istanbul": "^3.0.5",
     "@vitest/coverage-v8": "^3.0.5",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
     "vitest": "^3.0.5"
   }
 }
